--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>승강기 검사기준 시뮬레이터 · 최종판</title>
+<title>승강기 검사기준 시뮬레이터 · 선택창 개선판</title>
 <style>
 :root { --bg:#0b1220; --card:#111b2e; --muted:#9fb0d0; --text:#e7eefc; --green:#19c37d; --red:#ff4d4f; --line:#22314f; --chip:#162545; --shadow:0 10px 30px rgba(0,0,0,.35); --accent:#7aa2ff; }
 *{box-sizing:border-box}
@@ -19,7 +19,13 @@ label{display:block;font-size:12px;color:var(--muted);margin-bottom:6px}
 input,select,button{width:100%; padding:10px 12px; border-radius:12px; border:1px solid var(--line); background: rgba(10,16,30,.55); color:var(--text);}
 button{cursor:pointer;font-weight:700;background: rgba(22,37,69,.85)}
 button:hover{filter:brightness(1.06)}
-.topics{border:1px solid var(--line); border-radius:12px; padding:8px; max-height:500px; overflow:auto;}
+.topics{
+  border:1px solid var(--line); 
+  border-radius:12px; 
+  padding:8px; 
+  max-height:400px;       /* 최대 10개 항목 정도 표시 */
+  overflow-y:auto;        /* 10개 이상 시 스크롤 */
+}
 .topic{display:flex; gap:8px; align-items:flex-start; padding:6px 4px; border-bottom:1px dashed rgba(255,255,255,.08)}
 .topic:last-child{border-bottom:none}
 .topic input{width:auto; margin-top:2px}
@@ -42,42 +48,30 @@ mark{background: yellow; color: black;}
 <header>
 <div class="wrap">
 <h1>승강기 검사기준 시뮬레이터</h1>
-<div class="sub">✔ 체크박스 선택 + 검색 + 하이라이트 + 글씨 조절 + 초기화 개선</div>
+<div class="sub">✔ 선택창 개선판: 10개 항목 표시 + 검색/버튼 위쪽 배치</div>
 </div>
 </header>
 
 <div class="wrap">
 <div class="panel">
-<div class="controls">
-  <!-- 좌측: 체크박스 리스트 -->
-  <div>
-    <label>검사항목 선택</label>
-    <div class="topics" id="topics"></div>
+
+<!-- 선택창 위쪽: 검색 + 적용/초기화 + 글씨 조절 -->
+<div class="control-top">
+  <div class="text-size-controls" style="margin-bottom:8px;">
+    <button id="increase-font">글씨 크게</button>
+    <button id="decrease-font">글씨 작게</button>
   </div>
 
-  <!-- 우측: 모든 컨트롤 -->
-  <div style="display:flex; flex-direction:column; gap:8px;">
-    <div class="text-size-controls">
-      <button id="increase-font">글씨 크게</button>
-      <button id="decrease-font">글씨 작게</button>
-    </div>
-
-    <label>검사항목 검색</label>
-    <input type="text" id="search" placeholder="검색 (예: 피트, 조명, 환기)">
-
-    <label>건축허가일</label>
-    <div style="display:flex; gap:6px;">
-      <input type="date" id="date"/>
-      <button id="run">적용 표시</button>
-      <button id="reset">초기화</button>
-    </div>
-
-    <div class="presets">
-      <div class="preset" data-d="2013-09-15">2013.09.15 이후</div>
-      <div class="preset" data-d="2019-03-28">2019.03.28 이후</div>
-    </div>
+  <input type="text" id="search" placeholder="검사항목 검색" style="margin-bottom:6px;">
+  <div style="display:flex; gap:6px; margin-bottom:6px;">
+    <button id="run">적용 표시</button>
+    <button id="reset">초기화</button>
   </div>
 </div>
+
+<!-- 검사항목 선택창 -->
+<div class="topics" id="topics"></div>
+
 </div>
 
 <div class="grid" id="results"></div>
@@ -85,26 +79,24 @@ mark{background: yellow; color: black;}
 </div>
 
 <script>
-let DATA = [];
-let TITLE_MAP = {};
-let currentFontSize = 14;
+let DATA=[];
+let TITLE_MAP={};
+let currentFontSize=14;
 
-const topicsEl = document.getElementById('topics');
-const resultsEl = document.getElementById('results');
-const dateEl = document.getElementById('date');
-const searchInput = document.getElementById('search');
-const presets = document.querySelectorAll('.preset');
-const fontTargetsSelector = 'body, input, select, button, .topic span, .title, .text, .badge, .range';
-function applyFontSize(){
-  document.querySelectorAll(fontTargetsSelector).forEach(el=>el.style.fontSize=currentFontSize+'px');
-}
+const topicsEl=document.getElementById('topics');
+const resultsEl=document.getElementById('results');
+const dateEl=document.getElementById('date');
+const searchInput=document.getElementById('search');
+
+const fontTargetsSelector='body, input, select, button, .topic span, .title, .text, .badge, .range';
+function applyFontSize(){document.querySelectorAll(fontTargetsSelector).forEach(el=>el.style.fontSize=currentFontSize+'px');}
 
 fetch('./data/criteria.json')
 .then(res=>res.json())
 .then(json=>{
   if(json.criteria && Array.isArray(json.criteria)){
-    DATA = json.criteria.filter(Boolean);
-    TITLE_MAP = {};
+    DATA=json.criteria.filter(Boolean);
+    TITLE_MAP={};
     DATA.forEach(item=>{
       if(!item.title) return;
       if(!TITLE_MAP[item.title]) TITLE_MAP[item.title]=[];
@@ -119,14 +111,14 @@ function renderTopics(keyword=''){
   topicsEl.innerHTML='';
   Object.keys(TITLE_MAP).forEach(title=>{
     if(keyword && !title.toLowerCase().includes(keyword.toLowerCase())) return;
-    const label = document.createElement('label');
+    const label=document.createElement('label');
     label.className='topic';
-    const cb = document.createElement('input');
+    const cb=document.createElement('input');
     cb.type='checkbox';
     cb.value=title;
-    cb.addEventListener('change', ()=> renderResults(searchInput.value));
-    const span = document.createElement('span');
-    span.innerHTML = highlightText(title, keyword);
+    cb.addEventListener('change', ()=>renderResults(searchInput.value));
+    const span=document.createElement('span');
+    span.innerHTML=highlightText(title, keyword);
     label.appendChild(cb);
     label.appendChild(span);
     topicsEl.appendChild(label);
@@ -135,9 +127,9 @@ function renderTopics(keyword=''){
 
 function isApplied(buildDate, from, to){
   if(!buildDate) return false;
-  const b = new Date(buildDate);
-  const f = from ? new Date(from) : null;
-  const t = to ? new Date(to) : null;
+  const b=new Date(buildDate);
+  const f=from?new Date(from):null;
+  const t=to?new Date(to):null;
   if(f && b<f) return false;
   if(t && b>t) return false;
   return true;
@@ -145,46 +137,46 @@ function isApplied(buildDate, from, to){
 
 function highlightText(text, keyword){
   if(!keyword) return text;
-  const re = new RegExp(`(${keyword.replace(/[-\/\\^$*+?.()|[\]{}]/g,'\\$&')})`, 'gi');
-  return text.replace(re, '<mark>$1</mark>');
+  const re=new RegExp(`(${keyword.replace(/[-\/\\^$*+?.()|[\]{}]/g,'\\$&')})`, 'gi');
+  return text.replace(re,'<mark>$1</mark>');
 }
 
 function renderResults(keyword=''){
   resultsEl.innerHTML='';
-  const checked = Array.from(document.querySelectorAll('#topics input:checked')).map(cb=>cb.value);
+  const checked=Array.from(document.querySelectorAll('#topics input:checked')).map(cb=>cb.value);
   checked.forEach(title=>{
-    const items = TITLE_MAP[title] || [];
+    const items=TITLE_MAP[title]||[];
     items.forEach(item=>{
       if(keyword){
-        const haystack = `${item.title||''} ${item.label||''} ${item.text||''}`.toLowerCase();
+        const haystack=`${item.title||''} ${item.label||''} ${item.text||''}`.toLowerCase();
         if(!haystack.includes(keyword.toLowerCase())) return;
       }
-      const card = document.createElement('div');
+      const card=document.createElement('div');
       card.className='card';
-      const titleEl = document.createElement('div');
+      const titleEl=document.createElement('div');
       titleEl.className='title';
-      titleEl.innerHTML = highlightText(item.title||'제목 없음', keyword);
+      titleEl.innerHTML=highlightText(item.title||'제목 없음',keyword);
       card.appendChild(titleEl);
 
-      const timeline = document.createElement('div');
+      const timeline=document.createElement('div');
       timeline.className='timeline';
 
-      const badge = document.createElement('div');
+      const badge=document.createElement('div');
       badge.className='badge';
-      const applied = isApplied(dateEl.value,item.from,item.to);
+      const applied=isApplied(dateEl.value,item.from,item.to);
       badge.classList.add(applied?'ok':'no');
-      badge.textContent = applied?'🟩 적용':'🟥 미적용';
+      badge.textContent=applied?'🟩 적용':'🟥 미적용';
 
-      const range = document.createElement('div');
+      const range=document.createElement('div');
       range.className='range';
       range.textContent=`적용 기간: ${item.from||'—'} ~ ${item.to||'현재'}`;
       badge.appendChild(range);
 
-      const textEl = document.createElement('div');
+      const textEl=document.createElement('div');
       textEl.className='text';
-      textEl.innerHTML = `<b>${highlightText(item.label||'기준', keyword)}</b><br>${highlightText(item.text||'', keyword)}`;
+      textEl.innerHTML=`<b>${highlightText(item.label||'기준',keyword)}</b><br>${highlightText(item.text||'',keyword)}`;
 
-      const row = document.createElement('div');
+      const row=document.createElement('div');
       row.className='row';
       row.appendChild(badge);
       row.appendChild(textEl);
@@ -197,28 +189,18 @@ function renderResults(keyword=''){
 }
 
 // 글씨 크기 버튼
-document.getElementById('increase-font').addEventListener('click', ()=>{
-  currentFontSize += 1;
-  applyFontSize();
-});
-document.getElementById('decrease-font').addEventListener('click', ()=>{
-  currentFontSize = Math.max(10, currentFontSize-1);
-  applyFontSize();
-});
+document.getElementById('increase-font').addEventListener('click',()=>{currentFontSize+=1; applyFontSize();});
+document.getElementById('decrease-font').addEventListener('click',()=>{currentFontSize=Math.max(10,currentFontSize-1); applyFontSize();});
 
 // 버튼 이벤트
-document.getElementById('run').addEventListener('click',()=> renderResults(searchInput.value));
+document.getElementById('run').addEventListener('click',()=>renderResults(searchInput.value));
 document.getElementById('reset').addEventListener('click',()=>{
   dateEl.value='';
   searchInput.value='';
   document.querySelectorAll('#topics input').forEach(cb=>cb.checked=false);
-  renderTopics(); // 체크박스 + 검색 초기화
+  renderTopics();
   renderResults();
 });
-presets.forEach(p=>p.addEventListener('click',()=>{
-  dateEl.value=p.dataset.d;
-  renderResults(searchInput.value);
-}));
 searchInput.addEventListener('input',()=>{
   renderTopics(searchInput.value);
   renderResults(searchInput.value);
