--- a/index3.html
+++ b/index3.html
@@ -191,4 +191,70 @@ fetch('./data/criteria.json')
   DATA=j.criteria||[];
   DATA.forEach(i=>{
     if(!TITLE_MAP[i.title]) TITLE_MAP[i.title]=[];
-    T
+    TITLE_MAP[i.title].push(i);
+  });
+  renderTopics();
+});
+
+function renderTopics(k=''){
+  topicsEl.innerHTML='';
+  Object.keys(TITLE_MAP).forEach(t=>{
+    if(k && !t.includes(k)) return;
+    const l=document.createElement('label');
+    l.className='topic';
+    const c=document.createElement('input');
+    c.type='checkbox'; c.value=t;
+    c.onchange=()=>renderResults();
+    const s=document.createElement('span');
+    s.innerHTML=highlight(t,k);
+    l.append(c,s);
+    topicsEl.appendChild(l);
+  });
+}
+
+function isApplied(d,f,t){
+  if(!d) return false;
+  const b=new Date(d);
+  if(f && b<new Date(f)) return false;
+  if(t && b>new Date(t)) return false;
+  return true;
+}
+
+function highlight(t,k){
+  if(!k) return t;
+  return t.replace(new RegExp(`(${k})`,'gi'),'<mark>$1</mark>');
+}
+
+function renderResults(){
+  resultsEl.innerHTML='';
+  document.querySelectorAll('#topics input:checked').forEach(cb=>{
+    TITLE_MAP[cb.value].forEach(i=>{
+      const card=document.createElement('div');
+      card.className='card';
+      card.innerHTML=`
+        <div class="title">${i.title}</div>
+        <div class="row">
+          <div class="badge ${isApplied(dateEl.value,i.from,i.to)?'ok':'no'}">
+            ${isApplied(dateEl.value,i.from,i.to)?'🟩 적용':'🟥 미적용'}
+            <div class="range">${i.from||'—'} ~ ${i.to||'현재'}</div>
+          </div>
+          <div class="text"><b>${i.label}</b><br>${i.text}</div>
+        </div>`;
+      resultsEl.appendChild(card);
+    });
+  });
+}
+
+document.getElementById('run').onclick=renderResults;
+document.getElementById('reset').onclick=()=>{
+  dateEl.value=''; searchInput.value='';
+  document.querySelectorAll('#topics input').forEach(c=>c.checked=false);
+  renderResults();
+};
+searchInput.oninput=()=>renderTopics(searchInput.value);
+document.querySelectorAll('.preset').forEach(b=>{
+  b.onclick=()=>{dateEl.value=b.dataset.d;renderResults();}
+});
+</script>
+</body>
+</html>
